微信授权openID; 微信分享对接SDK；

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -99,6 +99,15 @@ ul, li {
   margin-top: 30px;
 }
 
+.shouquan-main{
+  width: 100%;
+  font-size: 14;
+  color: #333333;
+  text-align: center;
+  margin-top: 100px;
+  float: left;
+}
+
 ::-webkit-input-placeholder {
     /* WebKit browsers */
     color: #40d8da;
