--- a/src/style/topic.less
+++ b/src/style/topic.less
@@ -142,18 +142,19 @@ form {
 
 .result-view {
     width: auto;
-    div:nth-child(2) {
-        text-align: center;
-        margin-top: 50px;
-        font-size: 18px;
-        width: auto;
-        color: #40d8da;
-        span {
-            margin-top: 35px;
-            float: left;
-            width: 100%;
-            color: #f1ff7d;
-        }
+}
+
+.fdfdfdf {
+    text-align: center;
+    margin-top: 50px;
+    font-size: 18px;
+    width: auto;
+    color: #40d8da;
+    span {
+        margin-top: 35px;
+        float: left;
+        width: 100%;
+        color: #f1ff7d;
     }
 }
 
