--- a/src/style/main.less
+++ b/src/style/main.less
@@ -22,7 +22,7 @@ ul, li {
 }
 
 .page-content {
-  background: url(../../assets/images/background@2x.png) 0 0 no-repeat;
+  background: url(../../assets/images/background@2x.jpg) 0 0 no-repeat;
   background-size: cover;
   background-position: center center;
   min-height: 800px;
