1.修正相关问题

--- a/src/style/topic.less
+++ b/src/style/topic.less
@@ -115,7 +115,7 @@ form {
 .biankuang-result {
     font-size: 18px;
     color: #40d8da;
-    background: url(../../assets/images/kuang@2x.png) 0 0 no-repeat;
+    background: url(/assets/images/kuang@2x.png) 0 0 no-repeat;
     width: 300px;
     height: 109px;
     margin-left: auto;
@@ -159,7 +159,7 @@ form {
 }
 
 .down-page-icon {
-    background: url(../../assets/images/down_ic@3x.png) 0 0 no-repeat;
+    background: url(/assets/images/down_ic@3x.png) 0 0 no-repeat;
     width: 64px;
     height: 60px;
     background-size: cover;
