--- a/src/style/contact.less
+++ b/src/style/contact.less
@@ -3,7 +3,7 @@
 .biaokuang {
     font-size: 18px;
     color: #40d8da;
-    background: url(../../assets/images/kuang@2x.png) 0 0 no-repeat;
+    background: url(/assets/images/kuang@2x.png) 0 0 no-repeat;
     width: 300px;
     height: 109px;
     margin-left: auto;
