--- a/src/style/style.less
+++ b/src/style/style.less
@@ -36,7 +36,7 @@ div#div1 > img {
 .biankuang {
     font-size: 18px;
     color: #40d8da;
-    background: url(../../assets/images/kuang@2x.png) 0 0 no-repeat;
+    background: url(/assets/images/kuang@2x.png) 0 0 no-repeat;
     width: 300px;
     height: 109px;
     margin-left: auto;
@@ -65,7 +65,7 @@ div#div1 > img {
 
 #yes {
     a {
-        background: url(../../assets/images/yes_ic@2x.png) 0 0 no-repeat;
+        background: url(/assets/images/yes_ic@2x.png) 0 0 no-repeat;
         background-size: cover;
     }
 }
@@ -73,7 +73,7 @@ div#div1 > img {
 #no {
     margin-top: 22px;
     a {
-        background: url(../../assets/images/no_ic@2x.png) 0 0 no-repeat;
+        background: url(/assets/images/no_ic@2x.png) 0 0 no-repeat;
         background-size: cover;
     }
 }
@@ -81,7 +81,7 @@ div#div1 > img {
 #fight {
     margin-left: auto;
     margin-right: auto;
-    background: url(../../assets/images/kuang_2_bj@2x.png) 0 0 no-repeat;
+    background: url(/assets/images/kuang_2_bj@2x.png) 0 0 no-repeat;
     width: 296px;
     height: 272px;
     background-size: cover;
@@ -145,7 +145,7 @@ div#div1 > img {
     font-size: 36px;
     text-align: center;
     color: #40d8da;
-    background: url("../../assets/images/kuang@2x.png") 0 no-repeat;
+    background: url("/assets/images/kuang@2x.png") 0 no-repeat;
     width: 592px;
     height: 214px;
 }
